# Xtructure

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS_README.md  LICENSE  README.md  benchmark_data_structures.py  benchmark_results.md  benchmarks.py  dev-setup.sh  pyproject.toml  requirements.txt  setup.py  simple_benchmark.py  simple_benchmarks.py  xtructure_benchmark_results_1751457879.csv  xtructure_simple_benchmarks_1751454996.csv  데이터구조_벤치마크_결과.md
Xtructure/: __init__.py  annotate.py  bgpq.py  data.py  dataclass.py  field_descriptors.py  hash.py  util.py
benchmarks/: JAX_BLOCK_UNTIL_READY_VERIFICATION.md  README.md  SUMMARY.md  VERIFICATION_SUMMARY.md  __init__.py  __main__.py  benchmark_structures.py  bgpq_benchmark.py  hashtable_benchmark.py  queue_benchmark.py  run_all.py  stack_benchmark.py
doc/: api_reference.md  bgpq.md  core_concepts.md  hashtable.md  jax-0.8-gpu-regression.md  layout_flexibility.md  queue.md  stack.md  xnp.md
docs/: api_conventions.md  bgpq.md  conf.py  core_concepts.md  hashtable.md  index.rst  layout_flexibility.md  make.bat  modules.rst  queue.md  stack.md  update_array_on_condition_logic_review.md  xnp.md  xtructure.bgpq.merge_split.rst  xtructure.bgpq.rst  xtructure.core.rst  xtructure.core.xtructure_decorators.aggregate_bitpack.rst  xtructure.core.xtructure_decorators.rst  xtructure.core.xtructure_numpy.dataclass_ops.rst  xtructure.core.xtructure_numpy.dataclass_ops.unique_ops.rst  xtructure.core.xtructure_numpy.rst  xtructure.hashtable.rst  xtructure.io.rst  xtructure.queue.rst  xtructure.rst  xtructure.stack.rst
tests/: __init__.py  aggregate_bitpack_test.py  architecture_test.py  bgpq_backend_policy_test.py  bgpq_delete_test.py  bgpq_fast_path_test.py  bitpack_accessors_test.py  bitpack_bits12_test.py  dataclass_static_fields_test.py  dataclass_test.py  field_descriptor_utils_test.py  field_descriptors_test.py  hash_streaming_test.py  hash_test.py  hashtable_dedupe_mode_test.py  heap_test.py  io_test.py  layout_internal_test.py  layout_test.py  merge_split_common_test.py  nested_factory_test.py  packed_io_test.py  queue_test.py  stack_test.py  test_decorators.py  type_utils_test.py  validation_test.py  xnp_test.py  (+3 more)
(+198 files in other folders)
