[project]
name = "xtructure"
version = "0.1.3"
authors = [
  {name = "tinker495", email = "wjdrbtjr495@gmail.com"},
]
description = "JAX-optimized data structures"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = {Repository = "https://github.com/tinker495/Xtructure"}
dependencies = [
    "jax[cuda]>=0.4.0",
    "chex>=0.1.0",
    "tabulate>=0.9.0",
    "numpy>=2.2.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
pythonpath = ["."]
addopts = "-v --tb=short"
