[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests", "."]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "pallas_heap: hardware-specific BGPQ/Pallas heap stress tests; opt in with XTRUCTURE_RUN_PALLAS_HEAP_TESTS=1",
]
